// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Bun.TOML.parse parses valid TOML without errors, and produces errors for invalid TOML 1`] = `
"suite: Bun.TOML.parse
valid passing:   39.52% (147/372)
invalid passing: 60.65% (225/371)

pass: valid/empty-file.toml
fail: valid/spec-example-1-compact.toml
  BuildMessage: Expected key but found -
fail: valid/newline-crlf.json
  BuildMessage: Expected key but found {
fail: valid/spec-example-1.toml
  BuildMessage: Expected key but found -
pass: valid/implicit-groups.toml
pass: valid/implicit-and-explicit-before.toml
fail: valid/example.json
  BuildMessage: Expected key but found {
fail: valid/newline-lf.json
  BuildMessage: Expected key but found {
pass: valid/implicit-and-explicit-after.toml
fail: valid/spec-example-1-compact.json
  BuildMessage: Expected key but found {
fail: valid/empty-file.json
  BuildMessage: Expected key but found {
pass: valid/newline-crlf.toml
fail: valid/spec-example-1.json
  BuildMessage: Expected key but found {
fail: valid/implicit-groups.json
  BuildMessage: Expected key but found {
fail: valid/implicit-and-explicit-before.json
  BuildMessage: Expected key but found {
fail: valid/example.toml
  BuildMessage: Expected key but found -
pass: valid/newline-lf.toml
fail: valid/implicit-and-explicit-after.json
  BuildMessage: Expected key but found {
pass: valid/string/with-pound.toml
fail: valid/string/simple.json
  BuildMessage: Expected key but found {
fail: valid/string/empty.json
  BuildMessage: Expected key but found {
pass: valid/string/multiline.toml
pass: valid/string/unicode-literal.toml
pass: valid/string/start-mb.toml
fail: valid/string/multiline-empty.json
  BuildMessage: Expected key but found {
fail: valid/string/nl.json
  BuildMessage: Expected key but found {
pass: valid/string/escape-esc.toml
fail: valid/string/quoted-unicode.toml
  SyntaxError: Failed to parse JSON
fail: valid/string/raw-multiline.toml
  BuildMessage: Expected t_equal but found end of file
pass: valid/string/escaped-escape.toml
fail: valid/string/ends-in-whitespace-escape.json
  BuildMessage: Expected key but found {
fail: valid/string/raw.json
  BuildMessage: Expected key but found {
fail: valid/string/double-quote-escape.json
  BuildMessage: Expected key but found {
pass: valid/string/multiline-escaped-crlf.toml
pass: valid/string/escape-tricky.toml
fail: valid/string/escapes.json
  BuildMessage: Expected key but found {
fail: valid/string/multiline-quotes.toml
  BuildMessage: Unterminated string literal (single-line)
fail: valid/string/hex-escape.toml
  BuildMessage: Syntax Error
fail: valid/string/unicode-escape.toml
  SyntaxError: Failed to parse JSON
fail: valid/string/with-pound.json
  BuildMessage: Expected key but found {
pass: valid/string/simple.toml
fail: valid/string/multiline.json
  BuildMessage: Expected key but found {
pass: valid/string/empty.toml
fail: valid/string/unicode-literal.json
  BuildMessage: Expected key but found {
fail: valid/string/start-mb.json
  BuildMessage: Expected key but found {
pass: valid/string/multiline-empty.toml
pass: valid/string/nl.toml
fail: valid/string/escape-esc.json
  BuildMessage: Expected key but found {
fail: valid/string/quoted-unicode.json
  BuildMessage: Expected key but found {
fail: valid/string/escaped-escape.json
  BuildMessage: Expected key but found {
fail: valid/string/raw-multiline.json
  BuildMessage: Expected key but found {
pass: valid/string/ends-in-whitespace-escape.toml
pass: valid/string/raw.toml
pass: valid/string/double-quote-escape.toml
fail: valid/string/multiline-escaped-crlf.json
  BuildMessage: Expected key but found {
fail: valid/string/escape-tricky.json
  BuildMessage: Expected key but found {
fail: valid/string/escapes.toml
  SyntaxError: Failed to parse JSON
fail: valid/string/multiline-quotes.json
  BuildMessage: Expected key but found {
fail: valid/string/hex-escape.json
  BuildMessage: Expected key but found {
fail: valid/string/unicode-escape.json
  BuildMessage: Expected key but found {
pass: valid/integer/long.toml
fail: valid/integer/float64-max.json
  BuildMessage: Expected key but found {
pass: valid/integer/literals.toml
fail: valid/integer/zero.json
  BuildMessage: Expected key but found {
pass: valid/integer/integer.toml
pass: valid/integer/underscore.toml
fail: valid/integer/long.json
  BuildMessage: Expected key but found {
pass: valid/integer/float64-max.toml
fail: valid/integer/literals.json
  BuildMessage: Expected key but found {
pass: valid/integer/zero.toml
fail: valid/integer/integer.json
  BuildMessage: Expected key but found {
fail: valid/integer/underscore.json
  BuildMessage: Expected key but found {
fail: valid/bool/bool.json
  BuildMessage: Expected key but found {
pass: valid/bool/bool.toml
pass: valid/float/long.toml
pass: valid/float/float.toml
pass: valid/float/max-int.toml
fail: valid/float/exponent.json
  BuildMessage: Expected key but found {
fail: valid/float/zero.json
  BuildMessage: Expected key but found {
fail: valid/float/inf-and-nan.json
  BuildMessage: Expected key but found {
pass: valid/float/underscore.toml
fail: valid/float/long.json
  BuildMessage: Expected key but found {
fail: valid/float/float.json
  BuildMessage: Expected key but found {
fail: valid/float/max-int.json
  BuildMessage: Expected key but found {
pass: valid/float/exponent.toml
pass: valid/float/zero.toml
pass: valid/float/inf-and-nan.toml
fail: valid/float/underscore.json
  BuildMessage: Expected key but found {
pass: valid/table/with-pound.toml
fail: valid/table/array-many.json
  BuildMessage: Expected key but found {
pass: valid/table/sub-empty.toml
fail: valid/table/no-eol.json
  BuildMessage: Expected key but found {
fail: valid/table/names.toml
  AggregateError: Failed to parse toml
fail: valid/table/whitespace.json
  BuildMessage: Expected key but found {
fail: valid/table/with-literal-string.json
  BuildMessage: Expected key but found {
fail: valid/table/without-super.json
  BuildMessage: Expected key but found {
fail: valid/table/empty.json
  BuildMessage: Expected key but found {
fail: valid/table/keyword.json
  BuildMessage: Expected key but found {
fail: valid/table/array-implicit.json
  BuildMessage: Expected key but found {
fail: valid/table/array-nest.json
  BuildMessage: Expected key but found {
pass: valid/table/array-table-array.toml
pass: valid/table/empty-name.toml
fail: valid/table/array-implicit-and-explicit-after.json
  BuildMessage: Expected key but found {
fail: valid/table/array-one.json
  BuildMessage: Expected key but found {
pass: valid/table/with-single-quotes.toml
fail: valid/table/sub.json
  BuildMessage: Expected key but found {
fail: valid/table/array-within-dotted.json
  BuildMessage: Expected key but found {
fail: valid/table/with-pound.json
  BuildMessage: Expected key but found {
pass: valid/table/array-many.toml
fail: valid/table/sub-empty.json
  BuildMessage: Expected key but found {
pass: valid/table/whitespace.toml
pass: valid/table/no-eol.toml
fail: valid/table/names.json
  BuildMessage: Expected key but found {
pass: valid/table/with-literal-string.toml
pass: valid/table/without-super.toml
pass: valid/table/empty.toml
pass: valid/table/keyword.toml
pass: valid/table/array-implicit.toml
fail: valid/table/array-table-array.json
  BuildMessage: Expected key but found {
pass: valid/table/array-nest.toml
fail: valid/table/empty-name.json
  BuildMessage: Expected key but found {
pass: valid/table/array-implicit-and-explicit-after.toml
pass: valid/table/array-one.toml
fail: valid/table/with-single-quotes.json
  BuildMessage: Expected key but found {
pass: valid/table/sub.toml
pass: valid/table/array-within-dotted.toml
fail: valid/key/empty-1.json
  BuildMessage: Expected key but found {
fail: valid/key/dotted-4.json
  BuildMessage: Expected key but found {
fail: valid/key/start.toml
  BuildMessage: Expected key but found -
fail: valid/key/space.json
  BuildMessage: Expected key but found {
pass: valid/key/special-word.toml
fail: valid/key/numeric-dotted.json
  BuildMessage: Expected key but found {
pass: valid/key/dotted-1.toml
fail: valid/key/quoted-unicode.toml
  SyntaxError: Failed to parse JSON
pass: valid/key/dotted-empty.toml
pass: valid/key/case-sensitive.toml
pass: valid/key/empty-3.toml
fail: valid/key/special-chars.json
  BuildMessage: Expected key but found {
fail: valid/key/alphanum.toml
  AggregateError: Failed to parse toml
pass: valid/key/quoted-dots.toml
fail: valid/key/dotted-2.json
  BuildMessage: Expected key but found {
fail: valid/key/zero.json
  BuildMessage: Expected key but found {
fail: valid/key/dotted-3.json
  BuildMessage: Expected key but found {
fail: valid/key/escapes.json
  BuildMessage: Expected key but found {
pass: valid/key/numeric.toml
fail: valid/key/equals-nospace.json
  BuildMessage: Expected key but found {
pass: valid/key/empty-2.toml
pass: valid/key/empty-1.toml
pass: valid/key/dotted-4.toml
fail: valid/key/start.json
  BuildMessage: Expected key but found {
pass: valid/key/space.toml
fail: valid/key/special-word.json
  BuildMessage: Expected key but found {
pass: valid/key/numeric-dotted.toml
fail: valid/key/dotted-1.json
  BuildMessage: Expected key but found {
fail: valid/key/quoted-unicode.json
  BuildMessage: Expected key but found {
fail: valid/key/dotted-empty.json
  BuildMessage: Expected key but found {
fail: valid/key/case-sensitive.json
  BuildMessage: Expected key but found {
fail: valid/key/empty-3.json
  BuildMessage: Expected key but found {
pass: valid/key/special-chars.toml
fail: valid/key/alphanum.json
  BuildMessage: Expected key but found {
fail: valid/key/quoted-dots.json
  BuildMessage: Expected key but found {
pass: valid/key/dotted-2.toml
pass: valid/key/zero.toml
pass: valid/key/dotted-3.toml
pass: valid/key/escapes.toml
fail: valid/key/numeric.json
  BuildMessage: Expected key but found {
pass: valid/key/equals-nospace.toml
fail: valid/key/empty-2.json
  BuildMessage: Expected key but found {
fail: valid/spec/float-1.json
  BuildMessage: Expected key but found {
pass: valid/spec/string-3.toml
fail: valid/spec/boolean-0.json
  BuildMessage: Expected key but found {
fail: valid/spec/table-2.json
  BuildMessage: Expected key but found {
pass: valid/spec/inline-table-0.toml
pass: valid/spec/table-6.toml
fail: valid/spec/string-7.json
  BuildMessage: Expected key but found {
fail: valid/spec/keys-6.json
  BuildMessage: Expected key but found {
fail: valid/spec/local-time-0.toml
  BuildMessage: Expected key but found :
pass: valid/spec/comment-0.toml
fail: valid/spec/keys-7.json
  BuildMessage: Expected key but found {
fail: valid/spec/string-6.json
  BuildMessage: Expected key but found {
fail: valid/spec/table-7.toml
  BuildMessage: Expected key but found -
pass: valid/spec/array-of-tables-2.toml
pass: valid/spec/inline-table-1.toml
fail: valid/spec/key-value-pair-0.json
  BuildMessage: Expected key but found {
pass: valid/spec/integer-2.toml
fail: valid/spec/table-3.json
  BuildMessage: Expected key but found {
pass: valid/spec/string-2.toml
fail: valid/spec/local-date-0.json
  BuildMessage: Expected key but found {
pass: valid/spec/keys-3.toml
fail: valid/spec/float-0.json
  BuildMessage: Expected key but found {
fail: valid/spec/integer-1.json
  BuildMessage: Expected key but found {
pass: valid/spec/table-0.toml
fail: valid/spec/table-8.json
  BuildMessage: Expected key but found {
fail: valid/spec/offset-date-time-0.toml
  BuildMessage: Expected key but found -
fail: valid/spec/string-1.json
  BuildMessage: Expected key but found {
fail: valid/spec/keys-0.json
  BuildMessage: Expected key but found {
pass: valid/spec/keys-4.toml
pass: valid/spec/string-5.toml
fail: valid/spec/table-4.json
  BuildMessage: Expected key but found {
fail: valid/spec/array-1.json
  BuildMessage: Expected key but found {
fail: valid/spec/array-of-tables-1.json
  BuildMessage: Expected key but found {
fail: valid/spec/inline-table-2.json
  BuildMessage: Expected key but found {
fail: valid/spec/inline-table-3.json
  BuildMessage: Expected key but found {
fail: valid/spec/array-of-tables-0.json
  BuildMessage: Expected key but found {
fail: valid/spec/array-0.json
  BuildMessage: Expected key but found {
fail: valid/spec/table-5.json
  BuildMessage: Expected key but found {
fail: valid/spec/string-4.toml
  BuildMessage: Unterminated basic string (single-line)
pass: valid/spec/keys-5.toml
pass: valid/spec/float-2.toml
fail: valid/spec/keys-1.json
  BuildMessage: Expected key but found {
fail: valid/spec/string-0.json
  BuildMessage: Expected key but found {
fail: valid/spec/offset-date-time-1.toml
  BuildMessage: Expected key but found -
fail: valid/spec/table-9.json
  BuildMessage: Expected key but found {
pass: valid/spec/table-1.toml
fail: valid/spec/local-date-time-0.json
  BuildMessage: Expected key but found {
fail: valid/spec/integer-0.json
  BuildMessage: Expected key but found {
pass: valid/spec/float-1.toml
fail: valid/spec/string-3.json
  BuildMessage: Expected key but found {
pass: valid/spec/boolean-0.toml
pass: valid/spec/table-2.toml
fail: valid/spec/inline-table-0.json
  BuildMessage: Expected key but found {
fail: valid/spec/table-6.json
  BuildMessage: Expected key but found {
fail: valid/spec/string-7.toml
  BuildMessage: Unterminated string literal (single-line)
pass: valid/spec/keys-6.toml
fail: valid/spec/local-time-0.json
  BuildMessage: Expected key but found {
fail: valid/spec/comment-0.json
  BuildMessage: Expected key but found {
pass: valid/spec/keys-7.toml
pass: valid/spec/string-6.toml
fail: valid/spec/table-7.json
  BuildMessage: Expected key but found {
fail: valid/spec/array-of-tables-2.json
  BuildMessage: Expected key but found {
pass: valid/spec/key-value-pair-0.toml
fail: valid/spec/inline-table-1.json
  BuildMessage: Expected key but found {
fail: valid/spec/integer-2.json
  BuildMessage: Expected key but found {
pass: valid/spec/table-3.toml
fail: valid/spec/string-2.json
  BuildMessage: Expected key but found {
fail: valid/spec/local-date-0.toml
  BuildMessage: Expected key but found -
fail: valid/spec/keys-3.json
  BuildMessage: Expected key but found {
pass: valid/spec/float-0.toml
pass: valid/spec/integer-1.toml
fail: valid/spec/table-0.json
  BuildMessage: Expected key but found {
pass: valid/spec/table-8.toml
pass: valid/spec/string-1.toml
fail: valid/spec/offset-date-time-0.json
  BuildMessage: Expected key but found {
pass: valid/spec/keys-0.toml
fail: valid/spec/keys-4.json
  BuildMessage: Expected key but found {
fail: valid/spec/string-5.json
  BuildMessage: Expected key but found {
pass: valid/spec/array-1.toml
pass: valid/spec/table-4.toml
pass: valid/spec/array-of-tables-1.toml
pass: valid/spec/inline-table-2.toml
pass: valid/spec/inline-table-3.toml
pass: valid/spec/array-of-tables-0.toml
pass: valid/spec/table-5.toml
pass: valid/spec/array-0.toml
fail: valid/spec/string-4.json
  BuildMessage: Expected key but found {
fail: valid/spec/keys-5.json
  BuildMessage: Expected key but found {
fail: valid/spec/float-2.json
  BuildMessage: Expected key but found {
pass: valid/spec/keys-1.toml
fail: valid/spec/offset-date-time-1.json
  BuildMessage: Expected key but found {
pass: valid/spec/string-0.toml
pass: valid/spec/table-9.toml
fail: valid/spec/table-1.json
  BuildMessage: Expected key but found {
pass: valid/spec/integer-0.toml
fail: valid/spec/local-date-time-0.toml
  BuildMessage: Expected key but found -
pass: valid/inline-table/key-dotted-5.toml
pass: valid/inline-table/end-in-bool.toml
fail: valid/inline-table/empty.json
  BuildMessage: Expected key but found {
pass: valid/inline-table/multiline.toml
fail: valid/inline-table/key-dotted-1.json
  BuildMessage: Expected key but found {
fail: valid/inline-table/spaces.json
  BuildMessage: Expected key but found {
fail: valid/inline-table/bool.json
  BuildMessage: Expected key but found {
fail: valid/inline-table/key-dotted-4.toml
  BuildMessage: Expected key but found [
fail: valid/inline-table/inline-table.json
  BuildMessage: Expected key but found {
fail: valid/inline-table/key-dotted-7.json
  BuildMessage: Expected key but found {
pass: valid/inline-table/nest.toml
fail: valid/inline-table/array.json
  BuildMessage: Expected key but found {
pass: valid/inline-table/key-dotted-3.toml
fail: valid/inline-table/array-values.json
  BuildMessage: Expected key but found {
pass: valid/inline-table/key-dotted-2.toml
fail: valid/inline-table/key-dotted-6.json
  BuildMessage: Expected key but found {
fail: valid/inline-table/newline.json
  BuildMessage: Expected key but found {
fail: valid/inline-table/key-dotted-5.json
  BuildMessage: Expected key but found {
fail: valid/inline-table/end-in-bool.json
  BuildMessage: Expected key but found {
fail: valid/inline-table/multiline.json
  BuildMessage: Expected key but found {
pass: valid/inline-table/empty.toml
pass: valid/inline-table/key-dotted-1.toml
pass: valid/inline-table/spaces.toml
pass: valid/inline-table/bool.toml
fail: valid/inline-table/key-dotted-4.json
  BuildMessage: Expected key but found {
pass: valid/inline-table/inline-table.toml
pass: valid/inline-table/key-dotted-7.toml
pass: valid/inline-table/array.toml
fail: valid/inline-table/nest.json
  BuildMessage: Expected key but found {
fail: valid/inline-table/key-dotted-3.json
  BuildMessage: Expected key but found {
pass: valid/inline-table/array-values.toml
fail: valid/inline-table/key-dotted-2.json
  BuildMessage: Expected key but found {
pass: valid/inline-table/key-dotted-6.toml
pass: valid/inline-table/newline.toml
fail: valid/comment/nonascii.json
  BuildMessage: Expected key but found {
fail: valid/comment/at-eof.json
  BuildMessage: Expected key but found {
fail: valid/comment/tricky.json
  BuildMessage: Expected key but found {
pass: valid/comment/at-eof2.toml
fail: valid/comment/after-literal-no-ws.json
  BuildMessage: Expected key but found {
fail: valid/comment/everywhere.toml
  BuildMessage: Expected key but found -
pass: valid/comment/noeol.toml
pass: valid/comment/nonascii.toml
pass: valid/comment/at-eof.toml
fail: valid/comment/tricky.toml
  BuildMessage: Unexpected [[
fail: valid/comment/at-eof2.json
  BuildMessage: Expected key but found {
pass: valid/comment/after-literal-no-ws.toml
fail: valid/comment/everywhere.json
  BuildMessage: Expected key but found {
fail: valid/comment/noeol.json
  BuildMessage: Expected key but found {
fail: valid/datetime/timezone.toml
  BuildMessage: Expected key but found -
fail: valid/datetime/milliseconds.toml
  BuildMessage: Expected key but found -
fail: valid/datetime/edge.json
  BuildMessage: Expected key but found {
fail: valid/datetime/no-seconds.json
  BuildMessage: Expected key but found {
fail: valid/datetime/local-time.json
  BuildMessage: Expected key but found {
fail: valid/datetime/datetime.json
  BuildMessage: Expected key but found {
fail: valid/datetime/local-date.toml
  BuildMessage: Expected key but found -
fail: valid/datetime/leap-year.toml
  AggregateError: Failed to parse toml
fail: valid/datetime/local.toml
  BuildMessage: Expected key but found -
fail: valid/datetime/timezone.json
  BuildMessage: Expected key but found {
fail: valid/datetime/milliseconds.json
  BuildMessage: Expected key but found {
fail: valid/datetime/edge.toml
  BuildMessage: Expected key but found -
fail: valid/datetime/local-time.toml
  BuildMessage: Expected key but found :
fail: valid/datetime/no-seconds.toml
  BuildMessage: Expected key but found :
fail: valid/datetime/datetime.toml
  BuildMessage: Expected key but found -
fail: valid/datetime/local-date.json
  BuildMessage: Expected key but found {
fail: valid/datetime/leap-year.json
  BuildMessage: Expected key but found {
fail: valid/datetime/local.json
  BuildMessage: Expected key but found {
pass: valid/array/open-parent-table.toml
fail: valid/array/string-with-comma.json
  BuildMessage: Expected key but found {
fail: valid/array/empty.json
  BuildMessage: Expected key but found {
fail: valid/array/string-quote-comma.json
  BuildMessage: Expected key but found {
pass: valid/array/nospaces.toml
fail: valid/array/mixed-string-table.json
  BuildMessage: Expected key but found {
pass: valid/array/table-array-string-backslash.toml
fail: valid/array/string-quote-comma-2.json
  BuildMessage: Expected key but found {
pass: valid/array/mixed-int-string.toml
fail: valid/array/nested-double.json
  BuildMessage: Expected key but found {
pass: valid/array/nested-inline-table.toml
fail: valid/array/mixed-int-array.json
  BuildMessage: Expected key but found {
fail: valid/array/bool.json
  BuildMessage: Expected key but found {
fail: valid/array/nested.json
  BuildMessage: Expected key but found {
pass: valid/array/array-subtables.toml
pass: valid/array/strings.toml
fail: valid/array/hetergeneous.json
  BuildMessage: Expected key but found {
fail: valid/array/array.json
  BuildMessage: Expected key but found {
fail: valid/array/trailing-comma.json
  BuildMessage: Expected key but found {
pass: valid/array/mixed-int-float.toml
pass: valid/array/string-with-comma-2.toml
fail: valid/array/open-parent-table.json
  BuildMessage: Expected key but found {
pass: valid/array/string-with-comma.toml
pass: valid/array/string-quote-comma.toml
fail: valid/array/nospaces.json
  BuildMessage: Expected key but found {
fail: valid/array/empty.toml
  BuildMessage: Unexpected [[
pass: valid/array/mixed-string-table.toml
fail: valid/array/mixed-int-string.json
  BuildMessage: Expected key but found {
fail: valid/array/table-array-string-backslash.json
  BuildMessage: Expected key but found {
pass: valid/array/string-quote-comma-2.toml
fail: valid/array/nested-double.toml
  AggregateError: Failed to parse toml
fail: valid/array/nested-inline-table.json
  BuildMessage: Expected key but found {
fail: valid/array/mixed-int-array.toml
  AggregateError: Failed to parse toml
pass: valid/array/bool.toml
fail: valid/array/nested.toml
  AggregateError: Failed to parse toml
fail: valid/array/array-subtables.json
  BuildMessage: Expected key but found {
fail: valid/array/strings.json
  BuildMessage: Expected key but found {
fail: valid/array/hetergeneous.toml
  AggregateError: Failed to parse toml
fail: valid/array/array.toml
  AggregateError: Failed to parse toml
pass: valid/array/trailing-comma.toml
fail: valid/array/mixed-int-float.json
  BuildMessage: Expected key but found {
fail: valid/array/string-with-comma-2.json
  BuildMessage: Expected key but found {

pass: invalid/local-time/time-no-leads-2.toml
pass: invalid/local-time/no-secs.toml
pass: invalid/local-time/minute-over.toml
pass: invalid/local-time/time-no-leads.toml
pass: invalid/local-time/hour-over.toml
pass: invalid/local-time/second-over.toml
expected syntax error: invalid/control/rawmulti-del.toml
expected syntax error: invalid/control/comment-null.toml
expected syntax error: invalid/control/multi-cr.toml
expected syntax error: invalid/control/comment-ff.toml
expected syntax error: invalid/control/comment-del.toml
pass: invalid/control/rawmulti-lf.toml
expected syntax error: invalid/control/rawstring-del.toml
pass: invalid/control/string-cr.toml
pass: invalid/control/rawmulti-us.toml
pass: invalid/control/rawstring-cr.toml
expected syntax error: invalid/control/comment-cr.toml
expected syntax error: invalid/control/string-bs.toml
pass: invalid/control/rawmulti-null.toml
expected syntax error: invalid/control/rawmulti-cd.toml
expected syntax error: invalid/control/bare-cr.toml
expected syntax error: invalid/control/multi-del.toml
pass: invalid/control/string-null.toml
pass: invalid/control/multi-us.toml
pass: invalid/control/bare-vertical-tab.toml
pass: invalid/control/multi-lf.toml
expected syntax error: invalid/control/string-del.toml
pass: invalid/control/rawstring-null.toml
expected syntax error: invalid/control/bare-null.toml
pass: invalid/control/string-us.toml
pass: invalid/control/bare-formfeed.toml
pass: invalid/control/string-lf.toml
pass: invalid/control/rawstring-lf.toml
expected syntax error: invalid/control/comment-lf.toml
pass: invalid/control/rawstring-us.toml
expected syntax error: invalid/control/comment-us.toml
pass: invalid/control/multi-null.toml
expected syntax error: invalid/string/bad-escape-2.toml
pass: invalid/string/no-close-2.toml
pass: invalid/string/bad-uni-esc-7.toml
expected syntax error: invalid/string/multiline-escape-space-2.toml
expected syntax error: invalid/string/multiline-bad-escape-1.toml
pass: invalid/string/bad-hex-esc-1.toml
expected syntax error: invalid/string/basic-unknown-escape.toml
pass: invalid/string/multiline-no-close-1.toml
expected syntax error: invalid/string/bad-uni-esc-6.toml
pass: invalid/string/no-close-3.toml
pass: invalid/string/bad-escape-3.toml
pass: invalid/string/multiline-quotes-1.toml
expected syntax error: invalid/string/bad-slash-escape.toml
pass: invalid/string/no-close-4.toml
pass: invalid/string/bad-uni-esc-1.toml
pass: invalid/string/literal-multiline-quotes-2.toml
pass: invalid/string/multiline-lit-no-close-1.toml
expected syntax error: invalid/string/basic-multiline-out-of-range-unicode-escape-1.toml
pass: invalid/string/wrong-close.toml
expected syntax error: invalid/string/missing-quotes.toml
expected syntax error: invalid/string/basic-out-of-range-unicode-escape-2.toml
pass: invalid/string/multiline-bad-escape-4.toml
pass: invalid/string/bad-hex-esc-4.toml
expected syntax error: invalid/string/basic-out-of-range-unicode-escape-1.toml
expected syntax error: invalid/string/bad-uni-esc-3.toml
pass: invalid/string/multiline-no-close-4.toml
pass: invalid/string/multiline-lit-no-close-2.toml
pass: invalid/string/basic-multiline-quotes.toml
expected syntax error: invalid/string/basic-multiline-out-of-range-unicode-escape-2.toml
expected syntax error: invalid/string/basic-multiline-unknown-escape.toml
pass: invalid/string/multiline-lit-no-close-3.toml
pass: invalid/string/bad-concat.toml
pass: invalid/string/literal-multiline-quotes-1.toml
expected syntax error: invalid/string/bad-uni-esc-2.toml
pass: invalid/string/multiline-no-close-5.toml
pass: invalid/string/bad-hex-esc-5.toml
expected syntax error: invalid/string/basic-byte-escapes.toml
pass: invalid/string/multiline-no-close-2.toml
expected syntax error: invalid/string/bad-uni-esc-5.toml
pass: invalid/string/multiline-lit-no-close-4.toml
pass: invalid/string/text-after-string.toml
pass: invalid/string/bad-byte-escape.toml
expected syntax error: invalid/string/multiline-bad-escape-2.toml
pass: invalid/string/bad-hex-esc-2.toml
pass: invalid/string/bad-hex-esc-3.toml
expected syntax error: invalid/string/multiline-bad-escape-3.toml
pass: invalid/string/bad-multiline.toml
expected syntax error: invalid/string/multiline-escape-space-1.toml
expected syntax error: invalid/string/bad-escape-1.toml
pass: invalid/string/no-close-1.toml
pass: invalid/string/multiline-no-close-3.toml
expected syntax error: invalid/string/bad-uni-esc-4.toml
pass: invalid/local-datetime/month-under.toml
pass: invalid/local-datetime/feb-30.toml
pass: invalid/local-datetime/no-leads-with-milli.toml
pass: invalid/local-datetime/y10k.toml
pass: invalid/local-datetime/no-t.toml
pass: invalid/local-datetime/no-secs.toml
pass: invalid/local-datetime/minute-over.toml
pass: invalid/local-datetime/time-no-leads.toml
pass: invalid/local-datetime/mday-under.toml
pass: invalid/local-datetime/hour-over.toml
pass: invalid/local-datetime/no-leads.toml
pass: invalid/local-datetime/feb-29.toml
pass: invalid/local-datetime/second-over.toml
pass: invalid/local-datetime/mday-over.toml
pass: invalid/local-datetime/month-over.toml
pass: invalid/integer/us-after-oct.toml
pass: invalid/integer/invalid-bin.toml
expected syntax error: invalid/integer/trailing-us.toml
pass: invalid/integer/incomplete-oct.toml
expected syntax error: invalid/integer/negative-oct.toml
pass: invalid/integer/double-sign-plus.toml
pass: invalid/integer/double-us.toml
expected syntax error: invalid/integer/leading-us-bin.toml
expected syntax error: invalid/integer/trailing-us-oct.toml
pass: invalid/integer/invalid-hex-1.toml
expected syntax error: invalid/integer/positive-bin.toml
expected syntax error: invalid/integer/capital-oct.toml
pass: invalid/integer/leading-zero-3.toml
pass: invalid/integer/invalid-hex.toml
expected syntax error: invalid/integer/leading-us.toml
expected syntax error: invalid/integer/positive-hex.toml
expected syntax error: invalid/integer/leading-us-hex.toml
expected syntax error: invalid/integer/leading-zero-2.toml
expected syntax error: invalid/integer/leading-zero-sign-1.toml
expected syntax error: invalid/integer/leading-zero-1.toml
expected syntax error: invalid/integer/text-after-integer.toml
expected syntax error: invalid/integer/leading-zero-sign-2.toml
expected syntax error: invalid/integer/trailing-us-bin.toml
expected syntax error: invalid/integer/positive-oct.toml
expected syntax error: invalid/integer/leading-us-oct.toml
pass: invalid/integer/invalid-oct.toml
pass: invalid/integer/incomplete-bin.toml
pass: invalid/integer/us-after-bin.toml
expected syntax error: invalid/integer/negative-bin.toml
pass: invalid/integer/leading-zero-sign-3.toml
expected syntax error: invalid/integer/capital-hex.toml
pass: invalid/integer/invalid-hex-2.toml
expected syntax error: invalid/integer/trailing-us-hex.toml
pass: invalid/integer/double-sign-nex.toml
expected syntax error: invalid/integer/capital-bin.toml
expected syntax error: invalid/integer/negative-hex.toml
pass: invalid/integer/incomplete-hex.toml
pass: invalid/integer/us-after-hex.toml
expected syntax error: invalid/bool/mixed-case-true.toml
expected syntax error: invalid/bool/wrong-case-true.toml
expected syntax error: invalid/bool/starting-same-false.toml
expected syntax error: invalid/bool/almost-true.toml
expected syntax error: invalid/bool/mixed-case-false.toml
expected syntax error: invalid/bool/almost-false.toml
expected syntax error: invalid/bool/starting-same-true.toml
expected syntax error: invalid/bool/almost-false-with-extra.toml
expected syntax error: invalid/bool/capitalized-true.toml
expected syntax error: invalid/bool/capitalized-false.toml
expected syntax error: invalid/bool/wrong-case-false.toml
expected syntax error: invalid/bool/just-t.toml
expected syntax error: invalid/bool/just-f.toml
pass: invalid/bool/mixed-case.toml
expected syntax error: invalid/bool/almost-true-with-extra.toml
expected syntax error: invalid/float/trailing-us.toml
pass: invalid/float/exp-leading-us.toml
expected syntax error: invalid/float/inf-incomplete-2.toml
expected syntax error: invalid/float/nan_underscore.toml
pass: invalid/float/trailing-us-exp-2.toml
expected syntax error: invalid/float/nan-incomplete-3.toml
expected syntax error: invalid/float/leading-point-plus.toml
expected syntax error: invalid/float/nan-incomplete-2.toml
expected syntax error: invalid/float/exp-trailing-us.toml
pass: invalid/float/exp-trailing-us-1.toml
expected syntax error: invalid/float/inf-incomplete-3.toml
pass: invalid/float/exp-double-e-2.toml
expected syntax error: invalid/float/trailing-point-min.toml
pass: invalid/float/double-point-1.toml
expected syntax error: invalid/float/inf_underscore.toml
expected syntax error: invalid/float/exp-point-3.toml
pass: invalid/float/leading-us.toml
pass: invalid/float/exp-double-us.toml
expected syntax error: invalid/float/exp-point-2.toml
expected syntax error: invalid/float/leading-point.toml
pass: invalid/float/leading-zero-plus.toml
pass: invalid/float/exp-point-1.toml
pass: invalid/float/leading-zero.toml
pass: invalid/float/leading-zero-neg.toml
pass: invalid/float/us-before-point.toml
expected syntax error: invalid/float/trailing-point.toml
pass: invalid/float/double-point-2.toml
expected syntax error: invalid/float/trailing-point-plus.toml
expected syntax error: invalid/float/nan-capital.toml
expected syntax error: invalid/float/leading-point-neg.toml
pass: invalid/float/us-after-point.toml
expected syntax error: invalid/float/inf-capital.toml
expected syntax error: invalid/float/nan-incomplete-1.toml
pass: invalid/float/exp-trailing-us-2.toml
pass: invalid/float/exp-double-e-1.toml
expected syntax error: invalid/float/inf-incomplete-1.toml
pass: invalid/float/trailing-us-exp-1.toml
pass: invalid/table/with-pound.toml
pass: invalid/table/array-empty.toml
expected syntax error: invalid/table/append-with-dotted-keys-1.toml
expected syntax error: invalid/table/no-close-2.toml
pass: invalid/table/duplicate-key-dotted-array.toml
expected syntax error: invalid/table/redefine-3.toml
expected syntax error: invalid/table/redefine-2.toml
pass: invalid/table/empty-implicit-table.toml
pass: invalid/table/nested-brackets-close.toml
pass: invalid/table/no-close-3.toml
pass: invalid/table/overwrite-bool-with-array.toml
pass: invalid/table/equals-sign.toml
pass: invalid/table/no-close-4.toml
expected syntax error: invalid/table/array-no-close-2.toml
pass: invalid/table/duplicate-table-array.toml
expected syntax error: invalid/table/no-close-5.toml
pass: invalid/table/overwrite-with-deep-table.toml
pass: invalid/table/duplicate-key-table.toml
expected syntax error: invalid/table/duplicate.toml
expected syntax error: invalid/table/overwrite-array-in-parent.toml
pass: invalid/table/duplicate-table-array2.toml
pass: invalid/table/whitespace.toml
pass: invalid/table/empty.toml
pass: invalid/table/llbrace.toml
pass: invalid/table/rrbrace.toml
expected syntax error: invalid/table/array-no-close-1.toml
pass: invalid/table/array-implicit.toml
expected syntax error: invalid/table/append-to-array-with-dotted-keys.toml
expected syntax error: invalid/table/super-twice.toml
pass: invalid/table/redefine-1.toml
expected syntax error: invalid/table/duplicate-key-dotted-table2.toml
pass: invalid/table/text-after-table.toml
pass: invalid/table/nested-brackets-open.toml
expected syntax error: invalid/table/append-with-dotted-keys-2.toml
expected syntax error: invalid/table/duplicate-key-dotted-table.toml
pass: invalid/table/no-close-1.toml
pass: invalid/key/end-in-escape.toml
pass: invalid/key/start-bracket.toml
pass: invalid/key/without-value-3.toml
pass: invalid/key/two-equals-2.toml
pass: invalid/key/duplicate-keys-3.toml
pass: invalid/key/partial-quoted.toml
expected syntax error: invalid/key/after-table.toml
pass: invalid/key/duplicate-keys-2.toml
pass: invalid/key/two-equals-3.toml
pass: invalid/key/hash.toml
pass: invalid/key/without-value-2.toml
pass: invalid/key/without-value-5.toml
pass: invalid/key/bare-invalid-character.toml
pass: invalid/key/quoted-unclosed-2.toml
pass: invalid/key/dotted-redefine-table-1.toml
expected syntax error: invalid/key/newline-1.toml
expected syntax error: invalid/key/special-character.toml
pass: invalid/key/duplicate-keys-4.toml
pass: invalid/key/without-value-4.toml
expected syntax error: invalid/key/no-eol.toml
pass: invalid/key/without-value-7.toml
pass: invalid/key/empty.toml
pass: invalid/key/space.toml
pass: invalid/key/newline-3.toml
expected syntax error: invalid/key/escape.toml
pass: invalid/key/newline-2.toml
pass: invalid/key/single-open-bracket.toml
pass: invalid/key/without-value-6.toml
expected syntax error: invalid/key/after-value.toml
pass: invalid/key/start-dot.toml
pass: invalid/key/quoted-unclosed-1.toml
pass: invalid/key/dotted-redefine-table-2.toml
expected syntax error: invalid/key/newline-5.toml
pass: invalid/key/open-bracket.toml
pass: invalid/key/duplicate-keys-1.toml
expected syntax error: invalid/key/after-array.toml
pass: invalid/key/without-value-1.toml
pass: invalid/key/two-equals-1.toml
expected syntax error: invalid/key/newline-4.toml
expected syntax error: invalid/encoding/bad-utf8-in-multiline-literal.toml
pass: invalid/encoding/bom-not-at-start-2.toml
expected syntax error: invalid/encoding/utf16-bom.toml
expected syntax error: invalid/encoding/utf16-key.toml
expected syntax error: invalid/encoding/bad-utf8-in-string.toml
expected syntax error: invalid/encoding/bad-codepoint.toml
expected syntax error: invalid/encoding/bad-utf8-in-comment.toml
expected syntax error: invalid/encoding/bad-utf8-in-string-literal.toml
expected syntax error: invalid/encoding/utf16-comment.toml
pass: invalid/encoding/bom-not-at-start-1.toml
expected syntax error: invalid/encoding/bad-utf8-in-multiline.toml
expected syntax error: invalid/encoding/bad-utf8-at-end.toml
pass: invalid/spec/keys-2.toml
expected syntax error: invalid/spec/inline-table-2-0.toml
expected syntax error: invalid/spec/table-9-1.toml
expected syntax error: invalid/spec/table-9-0.toml
pass: invalid/spec/string-4-0.toml
pass: invalid/spec/inline-table-3-0.toml
pass: invalid/spec/string-7-0.toml
pass: invalid/spec/key-value-pair-1.toml
pass: invalid/inline-table/no-close-2.toml
expected syntax error: invalid/inline-table/overwrite-02.toml
pass: invalid/inline-table/overwrite-03.toml
expected syntax error: invalid/inline-table/linebreak-4.toml
pass: invalid/inline-table/duplicate-key-1.toml
expected syntax error: invalid/inline-table/overwrite-08.toml
pass: invalid/inline-table/empty-3.toml
expected syntax error: invalid/inline-table/linebreak-3.toml
pass: invalid/inline-table/overwrite-04.toml
pass: invalid/inline-table/no-comma-2.toml
expected syntax error: invalid/inline-table/overwrite-05.toml
expected syntax error: invalid/inline-table/linebreak-2.toml
pass: invalid/inline-table/double-comma.toml
pass: invalid/inline-table/overwrite-09.toml
pass: invalid/inline-table/empty-2.toml
pass: invalid/inline-table/empty-1.toml
expected syntax error: invalid/inline-table/duplicate-key-3.toml
pass: invalid/inline-table/no-comma-1.toml
pass: invalid/inline-table/overwrite-06.toml
expected syntax error: invalid/inline-table/linebreak-1.toml
pass: invalid/inline-table/overwrite-10.toml
expected syntax error: invalid/inline-table/overwrite-07.toml
pass: invalid/inline-table/duplicate-key-2.toml
pass: invalid/inline-table/bad-key-syntax.toml
expected syntax error: invalid/inline-table/trailing-comma.toml
pass: invalid/inline-table/duplicate-key-4.toml
pass: invalid/inline-table/no-close-1.toml
pass: invalid/inline-table/overwrite-01.toml
pass: invalid/datetime/offset-overflow-minute.toml
pass: invalid/datetime/month-under.toml
pass: invalid/datetime/feb-30.toml
pass: invalid/datetime/no-leads-with-milli.toml
pass: invalid/datetime/y10k.toml
pass: invalid/datetime/no-t.toml
pass: invalid/datetime/no-secs.toml
pass: invalid/datetime/minute-over.toml
pass: invalid/datetime/time-no-leads.toml
pass: invalid/datetime/no-leads-month.toml
pass: invalid/datetime/mday-under.toml
pass: invalid/datetime/hour-over.toml
pass: invalid/datetime/no-leads.toml
pass: invalid/datetime/feb-29.toml
pass: invalid/datetime/second-over.toml
pass: invalid/datetime/mday-over.toml
pass: invalid/datetime/offset-overflow-hour.toml
pass: invalid/datetime/month-over.toml
pass: invalid/array/no-close-2.toml
expected syntax error: invalid/array/text-after-array-entries.toml
expected syntax error: invalid/array/extending-table.toml
pass: invalid/array/only-comma-2.toml
pass: invalid/array/no-close-3.toml
pass: invalid/array/text-before-array-separator.toml
pass: invalid/array/no-close-8.toml
pass: invalid/array/tables-2.toml
pass: invalid/array/double-comma-1.toml
pass: invalid/array/no-close-4.toml
pass: invalid/array/no-comma-3.toml
expected syntax error: invalid/array/no-comma-2.toml
expected syntax error: invalid/array/missing-separator-2.toml
pass: invalid/array/no-close-5.toml
pass: invalid/array/no-close-table-2.toml
pass: invalid/array/no-close-table-1.toml
expected syntax error: invalid/array/missing-separator-1.toml
expected syntax error: invalid/array/no-comma-1.toml
pass: invalid/array/no-close-6.toml
pass: invalid/array/no-close-7.toml
expected syntax error: invalid/array/extend-defined-aot.toml
pass: invalid/array/text-in-array.toml
expected syntax error: invalid/array/tables-1.toml
pass: invalid/array/double-comma-2.toml
pass: invalid/array/only-comma-1.toml
pass: invalid/array/no-close-1.toml
pass: invalid/local-date/month-under.toml
pass: invalid/local-date/feb-30.toml
pass: invalid/local-date/trailing-t.toml
pass: invalid/local-date/no-leads-with-milli.toml
pass: invalid/local-date/y10k.toml
pass: invalid/local-date/mday-under.toml
pass: invalid/local-date/no-leads.toml
pass: invalid/local-date/feb-29.toml
pass: invalid/local-date/mday-over.toml
pass: invalid/local-date/month-over.toml
"
`;

exports[`import(*.toml) importing toml 1`] = `
"suite: import
valid passing:   90.05% (335/372)
invalid passing: 98.65% (366/371)

pass: valid/empty-file.toml
fail: valid/spec-example-1-compact.toml
  BuildMessage: Expected key but found -
pass: valid/newline-crlf.json
fail: valid/spec-example-1.toml
  BuildMessage: Expected key but found -
pass: valid/implicit-groups.toml
pass: valid/implicit-and-explicit-before.toml
pass: valid/example.json
pass: valid/newline-lf.json
pass: valid/implicit-and-explicit-after.toml
pass: valid/spec-example-1-compact.json
pass: valid/empty-file.json
pass: valid/newline-crlf.toml
pass: valid/spec-example-1.json
pass: valid/implicit-groups.json
pass: valid/implicit-and-explicit-before.json
fail: valid/example.toml
  BuildMessage: Expected key but found -
pass: valid/newline-lf.toml
pass: valid/implicit-and-explicit-after.json
pass: valid/string/with-pound.toml
pass: valid/string/simple.json
pass: valid/string/empty.json
pass: valid/string/multiline.toml
pass: valid/string/unicode-literal.toml
pass: valid/string/start-mb.toml
pass: valid/string/multiline-empty.json
pass: valid/string/nl.json
pass: valid/string/escape-esc.toml
pass: valid/string/quoted-unicode.toml
fail: valid/string/raw-multiline.toml
  BuildMessage: Expected t_equal but found end of file
pass: valid/string/escaped-escape.toml
pass: valid/string/ends-in-whitespace-escape.json
pass: valid/string/raw.json
pass: valid/string/double-quote-escape.json
pass: valid/string/multiline-escaped-crlf.toml
pass: valid/string/escape-tricky.toml
pass: valid/string/escapes.json
fail: valid/string/multiline-quotes.toml
  BuildMessage: Unterminated string literal (single-line)
fail: valid/string/hex-escape.toml
  BuildMessage: Syntax Error
pass: valid/string/unicode-escape.toml
pass: valid/string/with-pound.json
pass: valid/string/simple.toml
pass: valid/string/multiline.json
pass: valid/string/empty.toml
pass: valid/string/unicode-literal.json
pass: valid/string/start-mb.json
pass: valid/string/multiline-empty.toml
pass: valid/string/nl.toml
pass: valid/string/escape-esc.json
pass: valid/string/quoted-unicode.json
pass: valid/string/escaped-escape.json
pass: valid/string/raw-multiline.json
pass: valid/string/ends-in-whitespace-escape.toml
pass: valid/string/raw.toml
pass: valid/string/double-quote-escape.toml
pass: valid/string/multiline-escaped-crlf.json
pass: valid/string/escape-tricky.json
pass: valid/string/escapes.toml
pass: valid/string/multiline-quotes.json
pass: valid/string/hex-escape.json
pass: valid/string/unicode-escape.json
pass: valid/integer/long.toml
pass: valid/integer/float64-max.json
pass: valid/integer/literals.toml
pass: valid/integer/zero.json
pass: valid/integer/integer.toml
pass: valid/integer/underscore.toml
pass: valid/integer/long.json
pass: valid/integer/float64-max.toml
pass: valid/integer/literals.json
pass: valid/integer/zero.toml
pass: valid/integer/integer.json
pass: valid/integer/underscore.json
pass: valid/bool/bool.json
pass: valid/bool/bool.toml
pass: valid/float/long.toml
pass: valid/float/float.toml
pass: valid/float/max-int.toml
pass: valid/float/exponent.json
pass: valid/float/zero.json
pass: valid/float/inf-and-nan.json
pass: valid/float/underscore.toml
pass: valid/float/long.json
pass: valid/float/float.json
pass: valid/float/max-int.json
pass: valid/float/exponent.toml
pass: valid/float/zero.toml
fail: valid/float/inf-and-nan.toml
  AggregateError: 4 errors building "fixtures/toml/valid/float/inf-and-nan.toml"
pass: valid/float/underscore.json
pass: valid/table/with-pound.toml
pass: valid/table/array-many.json
pass: valid/table/sub-empty.toml
pass: valid/table/no-eol.json
fail: valid/table/names.toml
  AggregateError: 4 errors building "fixtures/toml/valid/table/names.toml"
pass: valid/table/whitespace.json
pass: valid/table/with-literal-string.json
pass: valid/table/without-super.json
pass: valid/table/empty.json
pass: valid/table/keyword.json
pass: valid/table/array-implicit.json
pass: valid/table/array-nest.json
pass: valid/table/array-table-array.toml
pass: valid/table/empty-name.toml
pass: valid/table/array-implicit-and-explicit-after.json
pass: valid/table/array-one.json
pass: valid/table/with-single-quotes.toml
pass: valid/table/sub.json
pass: valid/table/array-within-dotted.json
pass: valid/table/with-pound.json
pass: valid/table/array-many.toml
pass: valid/table/sub-empty.json
pass: valid/table/whitespace.toml
pass: valid/table/no-eol.toml
pass: valid/table/names.json
pass: valid/table/with-literal-string.toml
pass: valid/table/without-super.toml
pass: valid/table/empty.toml
pass: valid/table/keyword.toml
pass: valid/table/array-implicit.toml
pass: valid/table/array-table-array.json
pass: valid/table/array-nest.toml
pass: valid/table/empty-name.json
pass: valid/table/array-implicit-and-explicit-after.toml
pass: valid/table/array-one.toml
pass: valid/table/with-single-quotes.json
pass: valid/table/sub.toml
pass: valid/table/array-within-dotted.toml
pass: valid/key/empty-1.json
pass: valid/key/dotted-4.json
fail: valid/key/start.toml
  BuildMessage: Expected key but found -
pass: valid/key/space.json
pass: valid/key/special-word.toml
pass: valid/key/numeric-dotted.json
pass: valid/key/dotted-1.toml
pass: valid/key/quoted-unicode.toml
pass: valid/key/dotted-empty.toml
pass: valid/key/case-sensitive.toml
pass: valid/key/empty-3.toml
pass: valid/key/special-chars.json
fail: valid/key/alphanum.toml
  AggregateError: 2 errors building "fixtures/toml/valid/key/alphanum.toml"
pass: valid/key/quoted-dots.toml
pass: valid/key/dotted-2.json
pass: valid/key/zero.json
pass: valid/key/dotted-3.json
pass: valid/key/escapes.json
pass: valid/key/numeric.toml
pass: valid/key/equals-nospace.json
pass: valid/key/empty-2.toml
pass: valid/key/empty-1.toml
pass: valid/key/dotted-4.toml
pass: valid/key/start.json
pass: valid/key/space.toml
pass: valid/key/special-word.json
pass: valid/key/numeric-dotted.toml
pass: valid/key/dotted-1.json
pass: valid/key/quoted-unicode.json
pass: valid/key/dotted-empty.json
pass: valid/key/case-sensitive.json
pass: valid/key/empty-3.json
pass: valid/key/special-chars.toml
pass: valid/key/alphanum.json
pass: valid/key/quoted-dots.json
pass: valid/key/dotted-2.toml
pass: valid/key/zero.toml
pass: valid/key/dotted-3.toml
pass: valid/key/escapes.toml
pass: valid/key/numeric.json
pass: valid/key/equals-nospace.toml
pass: valid/key/empty-2.json
pass: valid/spec/float-1.json
pass: valid/spec/string-3.toml
pass: valid/spec/boolean-0.json
pass: valid/spec/table-2.json
pass: valid/spec/inline-table-0.toml
pass: valid/spec/table-6.toml
pass: valid/spec/string-7.json
pass: valid/spec/keys-6.json
fail: valid/spec/local-time-0.toml
  BuildMessage: Expected key but found :
pass: valid/spec/comment-0.toml
pass: valid/spec/keys-7.json
pass: valid/spec/string-6.json
fail: valid/spec/table-7.toml
  BuildMessage: Expected key but found -
pass: valid/spec/array-of-tables-2.toml
pass: valid/spec/inline-table-1.toml
pass: valid/spec/key-value-pair-0.json
pass: valid/spec/integer-2.toml
pass: valid/spec/table-3.json
pass: valid/spec/string-2.toml
pass: valid/spec/local-date-0.json
pass: valid/spec/keys-3.toml
pass: valid/spec/float-0.json
pass: valid/spec/integer-1.json
pass: valid/spec/table-0.toml
pass: valid/spec/table-8.json
fail: valid/spec/offset-date-time-0.toml
  BuildMessage: Expected key but found -
pass: valid/spec/string-1.json
pass: valid/spec/keys-0.json
pass: valid/spec/keys-4.toml
pass: valid/spec/string-5.toml
pass: valid/spec/table-4.json
pass: valid/spec/array-1.json
pass: valid/spec/array-of-tables-1.json
pass: valid/spec/inline-table-2.json
pass: valid/spec/inline-table-3.json
pass: valid/spec/array-of-tables-0.json
pass: valid/spec/array-0.json
pass: valid/spec/table-5.json
fail: valid/spec/string-4.toml
  BuildMessage: Unterminated basic string (single-line)
pass: valid/spec/keys-5.toml
fail: valid/spec/float-2.toml
  AggregateError: 4 errors building "fixtures/toml/valid/spec/float-2.toml"
pass: valid/spec/keys-1.json
pass: valid/spec/string-0.json
fail: valid/spec/offset-date-time-1.toml
  BuildMessage: Expected key but found -
pass: valid/spec/table-9.json
pass: valid/spec/table-1.toml
pass: valid/spec/local-date-time-0.json
pass: valid/spec/integer-0.json
pass: valid/spec/float-1.toml
pass: valid/spec/string-3.json
pass: valid/spec/boolean-0.toml
pass: valid/spec/table-2.toml
pass: valid/spec/inline-table-0.json
pass: valid/spec/table-6.json
fail: valid/spec/string-7.toml
  BuildMessage: Unterminated string literal (single-line)
pass: valid/spec/keys-6.toml
pass: valid/spec/local-time-0.json
pass: valid/spec/comment-0.json
pass: valid/spec/keys-7.toml
pass: valid/spec/string-6.toml
pass: valid/spec/table-7.json
pass: valid/spec/array-of-tables-2.json
pass: valid/spec/key-value-pair-0.toml
pass: valid/spec/inline-table-1.json
pass: valid/spec/integer-2.json
pass: valid/spec/table-3.toml
pass: valid/spec/string-2.json
fail: valid/spec/local-date-0.toml
  BuildMessage: Expected key but found -
pass: valid/spec/keys-3.json
pass: valid/spec/float-0.toml
pass: valid/spec/integer-1.toml
pass: valid/spec/table-0.json
pass: valid/spec/table-8.toml
pass: valid/spec/string-1.toml
pass: valid/spec/offset-date-time-0.json
pass: valid/spec/keys-0.toml
pass: valid/spec/keys-4.json
pass: valid/spec/string-5.json
pass: valid/spec/array-1.toml
pass: valid/spec/table-4.toml
pass: valid/spec/array-of-tables-1.toml
pass: valid/spec/inline-table-2.toml
pass: valid/spec/inline-table-3.toml
pass: valid/spec/array-of-tables-0.toml
pass: valid/spec/table-5.toml
pass: valid/spec/array-0.toml
pass: valid/spec/string-4.json
pass: valid/spec/keys-5.json
pass: valid/spec/float-2.json
pass: valid/spec/keys-1.toml
pass: valid/spec/offset-date-time-1.json
pass: valid/spec/string-0.toml
pass: valid/spec/table-9.toml
pass: valid/spec/table-1.json
pass: valid/spec/integer-0.toml
fail: valid/spec/local-date-time-0.toml
  BuildMessage: Expected key but found -
pass: valid/inline-table/key-dotted-5.toml
pass: valid/inline-table/end-in-bool.toml
pass: valid/inline-table/empty.json
pass: valid/inline-table/multiline.toml
pass: valid/inline-table/key-dotted-1.json
pass: valid/inline-table/spaces.json
pass: valid/inline-table/bool.json
fail: valid/inline-table/key-dotted-4.toml
  BuildMessage: Expected key but found [
pass: valid/inline-table/inline-table.json
pass: valid/inline-table/key-dotted-7.json
pass: valid/inline-table/nest.toml
pass: valid/inline-table/array.json
pass: valid/inline-table/key-dotted-3.toml
pass: valid/inline-table/array-values.json
pass: valid/inline-table/key-dotted-2.toml
pass: valid/inline-table/key-dotted-6.json
pass: valid/inline-table/newline.json
pass: valid/inline-table/key-dotted-5.json
pass: valid/inline-table/end-in-bool.json
pass: valid/inline-table/multiline.json
pass: valid/inline-table/empty.toml
pass: valid/inline-table/key-dotted-1.toml
pass: valid/inline-table/spaces.toml
pass: valid/inline-table/bool.toml
pass: valid/inline-table/key-dotted-4.json
pass: valid/inline-table/inline-table.toml
pass: valid/inline-table/key-dotted-7.toml
pass: valid/inline-table/array.toml
pass: valid/inline-table/nest.json
pass: valid/inline-table/key-dotted-3.json
pass: valid/inline-table/array-values.toml
pass: valid/inline-table/key-dotted-2.json
pass: valid/inline-table/key-dotted-6.toml
pass: valid/inline-table/newline.toml
pass: valid/comment/nonascii.json
pass: valid/comment/at-eof.json
pass: valid/comment/tricky.json
pass: valid/comment/at-eof2.toml
pass: valid/comment/after-literal-no-ws.json
fail: valid/comment/everywhere.toml
  BuildMessage: Expected key but found -
pass: valid/comment/noeol.toml
pass: valid/comment/nonascii.toml
pass: valid/comment/at-eof.toml
fail: valid/comment/tricky.toml
  BuildMessage: Unexpected [[
pass: valid/comment/at-eof2.json
pass: valid/comment/after-literal-no-ws.toml
pass: valid/comment/everywhere.json
pass: valid/comment/noeol.json
fail: valid/datetime/timezone.toml
  BuildMessage: Expected key but found -
fail: valid/datetime/milliseconds.toml
  BuildMessage: Expected key but found -
pass: valid/datetime/edge.json
pass: valid/datetime/no-seconds.json
pass: valid/datetime/local-time.json
pass: valid/datetime/datetime.json
fail: valid/datetime/local-date.toml
  BuildMessage: Expected key but found -
fail: valid/datetime/leap-year.toml
  AggregateError: 2 errors building "fixtures/toml/valid/datetime/leap-year.toml"
fail: valid/datetime/local.toml
  BuildMessage: Expected key but found -
pass: valid/datetime/timezone.json
pass: valid/datetime/milliseconds.json
fail: valid/datetime/edge.toml
  BuildMessage: Expected key but found -
fail: valid/datetime/local-time.toml
  BuildMessage: Expected key but found :
fail: valid/datetime/no-seconds.toml
  BuildMessage: Expected key but found :
fail: valid/datetime/datetime.toml
  BuildMessage: Expected key but found -
pass: valid/datetime/local-date.json
pass: valid/datetime/leap-year.json
pass: valid/datetime/local.json
pass: valid/array/open-parent-table.toml
pass: valid/array/string-with-comma.json
pass: valid/array/empty.json
pass: valid/array/string-quote-comma.json
pass: valid/array/nospaces.toml
pass: valid/array/mixed-string-table.json
pass: valid/array/table-array-string-backslash.toml
pass: valid/array/string-quote-comma-2.json
pass: valid/array/mixed-int-string.toml
pass: valid/array/nested-double.json
pass: valid/array/nested-inline-table.toml
pass: valid/array/mixed-int-array.json
pass: valid/array/bool.json
pass: valid/array/nested.json
pass: valid/array/array-subtables.toml
pass: valid/array/strings.toml
pass: valid/array/hetergeneous.json
pass: valid/array/array.json
pass: valid/array/trailing-comma.json
pass: valid/array/mixed-int-float.toml
pass: valid/array/string-with-comma-2.toml
pass: valid/array/open-parent-table.json
pass: valid/array/string-with-comma.toml
pass: valid/array/string-quote-comma.toml
pass: valid/array/nospaces.json
fail: valid/array/empty.toml
  BuildMessage: Unexpected [[
pass: valid/array/mixed-string-table.toml
pass: valid/array/mixed-int-string.json
pass: valid/array/table-array-string-backslash.json
pass: valid/array/string-quote-comma-2.toml
fail: valid/array/nested-double.toml
  AggregateError: 2 errors building "fixtures/toml/valid/array/nested-double.toml"
pass: valid/array/nested-inline-table.json
fail: valid/array/mixed-int-array.toml
  AggregateError: 2 errors building "fixtures/toml/valid/array/mixed-int-array.toml"
pass: valid/array/bool.toml
fail: valid/array/nested.toml
  AggregateError: 2 errors building "fixtures/toml/valid/array/nested.toml"
pass: valid/array/array-subtables.json
pass: valid/array/strings.json
fail: valid/array/hetergeneous.toml
  AggregateError: 2 errors building "fixtures/toml/valid/array/hetergeneous.toml"
fail: valid/array/array.toml
  AggregateError: 4 errors building "fixtures/toml/valid/array/array.toml"
pass: valid/array/trailing-comma.toml
pass: valid/array/mixed-int-float.json
pass: valid/array/string-with-comma-2.json

pass: invalid/local-time/time-no-leads-2.toml
pass: invalid/local-time/no-secs.toml
pass: invalid/local-time/minute-over.toml
pass: invalid/local-time/time-no-leads.toml
pass: invalid/local-time/hour-over.toml
pass: invalid/local-time/second-over.toml
pass: invalid/control/rawmulti-del.toml
pass: invalid/control/comment-null.toml
pass: invalid/control/multi-cr.toml
pass: invalid/control/comment-ff.toml
pass: invalid/control/comment-del.toml
pass: invalid/control/rawmulti-lf.toml
pass: invalid/control/rawstring-del.toml
pass: invalid/control/string-cr.toml
pass: invalid/control/rawmulti-us.toml
pass: invalid/control/rawstring-cr.toml
pass: invalid/control/comment-cr.toml
pass: invalid/control/string-bs.toml
pass: invalid/control/rawmulti-null.toml
pass: invalid/control/rawmulti-cd.toml
pass: invalid/control/bare-cr.toml
pass: invalid/control/multi-del.toml
pass: invalid/control/string-null.toml
pass: invalid/control/multi-us.toml
pass: invalid/control/bare-vertical-tab.toml
pass: invalid/control/multi-lf.toml
pass: invalid/control/string-del.toml
pass: invalid/control/rawstring-null.toml
pass: invalid/control/bare-null.toml
pass: invalid/control/string-us.toml
pass: invalid/control/bare-formfeed.toml
pass: invalid/control/string-lf.toml
pass: invalid/control/rawstring-lf.toml
pass: invalid/control/comment-lf.toml
pass: invalid/control/rawstring-us.toml
pass: invalid/control/comment-us.toml
pass: invalid/control/multi-null.toml
pass: invalid/string/bad-escape-2.toml
pass: invalid/string/no-close-2.toml
pass: invalid/string/bad-uni-esc-7.toml
pass: invalid/string/multiline-escape-space-2.toml
pass: invalid/string/multiline-bad-escape-1.toml
pass: invalid/string/bad-hex-esc-1.toml
pass: invalid/string/basic-unknown-escape.toml
pass: invalid/string/multiline-no-close-1.toml
pass: invalid/string/bad-uni-esc-6.toml
pass: invalid/string/no-close-3.toml
pass: invalid/string/bad-escape-3.toml
pass: invalid/string/multiline-quotes-1.toml
pass: invalid/string/bad-slash-escape.toml
pass: invalid/string/no-close-4.toml
pass: invalid/string/bad-uni-esc-1.toml
pass: invalid/string/literal-multiline-quotes-2.toml
pass: invalid/string/multiline-lit-no-close-1.toml
pass: invalid/string/basic-multiline-out-of-range-unicode-escape-1.toml
pass: invalid/string/wrong-close.toml
pass: invalid/string/missing-quotes.toml
pass: invalid/string/basic-out-of-range-unicode-escape-2.toml
pass: invalid/string/multiline-bad-escape-4.toml
pass: invalid/string/bad-hex-esc-4.toml
pass: invalid/string/basic-out-of-range-unicode-escape-1.toml
pass: invalid/string/bad-uni-esc-3.toml
pass: invalid/string/multiline-no-close-4.toml
pass: invalid/string/multiline-lit-no-close-2.toml
pass: invalid/string/basic-multiline-quotes.toml
pass: invalid/string/basic-multiline-out-of-range-unicode-escape-2.toml
pass: invalid/string/basic-multiline-unknown-escape.toml
pass: invalid/string/multiline-lit-no-close-3.toml
pass: invalid/string/bad-concat.toml
pass: invalid/string/literal-multiline-quotes-1.toml
pass: invalid/string/bad-uni-esc-2.toml
pass: invalid/string/multiline-no-close-5.toml
pass: invalid/string/bad-hex-esc-5.toml
pass: invalid/string/basic-byte-escapes.toml
pass: invalid/string/multiline-no-close-2.toml
pass: invalid/string/bad-uni-esc-5.toml
pass: invalid/string/multiline-lit-no-close-4.toml
pass: invalid/string/text-after-string.toml
pass: invalid/string/bad-byte-escape.toml
pass: invalid/string/multiline-bad-escape-2.toml
pass: invalid/string/bad-hex-esc-2.toml
pass: invalid/string/bad-hex-esc-3.toml
pass: invalid/string/multiline-bad-escape-3.toml
pass: invalid/string/bad-multiline.toml
pass: invalid/string/multiline-escape-space-1.toml
pass: invalid/string/bad-escape-1.toml
pass: invalid/string/no-close-1.toml
pass: invalid/string/multiline-no-close-3.toml
pass: invalid/string/bad-uni-esc-4.toml
pass: invalid/local-datetime/month-under.toml
pass: invalid/local-datetime/feb-30.toml
pass: invalid/local-datetime/no-leads-with-milli.toml
pass: invalid/local-datetime/y10k.toml
pass: invalid/local-datetime/no-t.toml
pass: invalid/local-datetime/no-secs.toml
pass: invalid/local-datetime/minute-over.toml
pass: invalid/local-datetime/time-no-leads.toml
pass: invalid/local-datetime/mday-under.toml
pass: invalid/local-datetime/hour-over.toml
pass: invalid/local-datetime/no-leads.toml
pass: invalid/local-datetime/feb-29.toml
pass: invalid/local-datetime/second-over.toml
pass: invalid/local-datetime/mday-over.toml
pass: invalid/local-datetime/month-over.toml
pass: invalid/integer/us-after-oct.toml
pass: invalid/integer/invalid-bin.toml
pass: invalid/integer/trailing-us.toml
pass: invalid/integer/incomplete-oct.toml
pass: invalid/integer/negative-oct.toml
pass: invalid/integer/double-sign-plus.toml
pass: invalid/integer/double-us.toml
pass: invalid/integer/leading-us-bin.toml
pass: invalid/integer/trailing-us-oct.toml
pass: invalid/integer/invalid-hex-1.toml
pass: invalid/integer/positive-bin.toml
pass: invalid/integer/capital-oct.toml
pass: invalid/integer/leading-zero-3.toml
pass: invalid/integer/invalid-hex.toml
pass: invalid/integer/leading-us.toml
pass: invalid/integer/positive-hex.toml
pass: invalid/integer/leading-us-hex.toml
pass: invalid/integer/leading-zero-2.toml
pass: invalid/integer/leading-zero-sign-1.toml
pass: invalid/integer/leading-zero-1.toml
pass: invalid/integer/text-after-integer.toml
pass: invalid/integer/leading-zero-sign-2.toml
pass: invalid/integer/trailing-us-bin.toml
pass: invalid/integer/positive-oct.toml
pass: invalid/integer/leading-us-oct.toml
pass: invalid/integer/invalid-oct.toml
pass: invalid/integer/incomplete-bin.toml
pass: invalid/integer/us-after-bin.toml
pass: invalid/integer/negative-bin.toml
pass: invalid/integer/leading-zero-sign-3.toml
pass: invalid/integer/capital-hex.toml
pass: invalid/integer/invalid-hex-2.toml
pass: invalid/integer/trailing-us-hex.toml
pass: invalid/integer/double-sign-nex.toml
pass: invalid/integer/capital-bin.toml
pass: invalid/integer/negative-hex.toml
pass: invalid/integer/incomplete-hex.toml
pass: invalid/integer/us-after-hex.toml
pass: invalid/bool/mixed-case-true.toml
pass: invalid/bool/wrong-case-true.toml
pass: invalid/bool/starting-same-false.toml
pass: invalid/bool/almost-true.toml
pass: invalid/bool/mixed-case-false.toml
pass: invalid/bool/almost-false.toml
pass: invalid/bool/starting-same-true.toml
pass: invalid/bool/almost-false-with-extra.toml
pass: invalid/bool/capitalized-true.toml
pass: invalid/bool/capitalized-false.toml
pass: invalid/bool/wrong-case-false.toml
pass: invalid/bool/just-t.toml
pass: invalid/bool/just-f.toml
pass: invalid/bool/mixed-case.toml
pass: invalid/bool/almost-true-with-extra.toml
pass: invalid/float/trailing-us.toml
pass: invalid/float/exp-leading-us.toml
pass: invalid/float/inf-incomplete-2.toml
pass: invalid/float/nan_underscore.toml
pass: invalid/float/trailing-us-exp-2.toml
pass: invalid/float/nan-incomplete-3.toml
pass: invalid/float/leading-point-plus.toml
pass: invalid/float/nan-incomplete-2.toml
pass: invalid/float/exp-trailing-us.toml
pass: invalid/float/exp-trailing-us-1.toml
pass: invalid/float/inf-incomplete-3.toml
pass: invalid/float/exp-double-e-2.toml
pass: invalid/float/trailing-point-min.toml
pass: invalid/float/double-point-1.toml
pass: invalid/float/inf_underscore.toml
pass: invalid/float/exp-point-3.toml
pass: invalid/float/leading-us.toml
pass: invalid/float/exp-double-us.toml
pass: invalid/float/exp-point-2.toml
pass: invalid/float/leading-point.toml
pass: invalid/float/leading-zero-plus.toml
pass: invalid/float/exp-point-1.toml
pass: invalid/float/leading-zero.toml
pass: invalid/float/leading-zero-neg.toml
pass: invalid/float/us-before-point.toml
pass: invalid/float/trailing-point.toml
pass: invalid/float/double-point-2.toml
pass: invalid/float/trailing-point-plus.toml
pass: invalid/float/nan-capital.toml
pass: invalid/float/leading-point-neg.toml
pass: invalid/float/us-after-point.toml
pass: invalid/float/inf-capital.toml
pass: invalid/float/nan-incomplete-1.toml
pass: invalid/float/exp-trailing-us-2.toml
pass: invalid/float/exp-double-e-1.toml
pass: invalid/float/inf-incomplete-1.toml
pass: invalid/float/trailing-us-exp-1.toml
expected syntax error: invalid/table/with-pound.toml
pass: invalid/table/array-empty.toml
pass: invalid/table/append-with-dotted-keys-1.toml
pass: invalid/table/no-close-2.toml
pass: invalid/table/duplicate-key-dotted-array.toml
pass: invalid/table/redefine-3.toml
pass: invalid/table/redefine-2.toml
pass: invalid/table/empty-implicit-table.toml
pass: invalid/table/nested-brackets-close.toml
pass: invalid/table/no-close-3.toml
pass: invalid/table/overwrite-bool-with-array.toml
pass: invalid/table/equals-sign.toml
pass: invalid/table/no-close-4.toml
pass: invalid/table/array-no-close-2.toml
pass: invalid/table/duplicate-table-array.toml
pass: invalid/table/no-close-5.toml
pass: invalid/table/overwrite-with-deep-table.toml
pass: invalid/table/duplicate-key-table.toml
pass: invalid/table/duplicate.toml
pass: invalid/table/overwrite-array-in-parent.toml
pass: invalid/table/duplicate-table-array2.toml
expected syntax error: invalid/table/whitespace.toml
expected syntax error: invalid/table/empty.toml
pass: invalid/table/llbrace.toml
pass: invalid/table/rrbrace.toml
pass: invalid/table/array-no-close-1.toml
expected syntax error: invalid/table/array-implicit.toml
pass: invalid/table/append-to-array-with-dotted-keys.toml
pass: invalid/table/super-twice.toml
pass: invalid/table/redefine-1.toml
pass: invalid/table/duplicate-key-dotted-table2.toml
pass: invalid/table/text-after-table.toml
pass: invalid/table/nested-brackets-open.toml
pass: invalid/table/append-with-dotted-keys-2.toml
pass: invalid/table/duplicate-key-dotted-table.toml
pass: invalid/table/no-close-1.toml
pass: invalid/key/end-in-escape.toml
pass: invalid/key/start-bracket.toml
pass: invalid/key/without-value-3.toml
pass: invalid/key/two-equals-2.toml
pass: invalid/key/duplicate-keys-3.toml
pass: invalid/key/partial-quoted.toml
pass: invalid/key/after-table.toml
pass: invalid/key/duplicate-keys-2.toml
pass: invalid/key/two-equals-3.toml
pass: invalid/key/hash.toml
pass: invalid/key/without-value-2.toml
pass: invalid/key/without-value-5.toml
pass: invalid/key/bare-invalid-character.toml
pass: invalid/key/quoted-unclosed-2.toml
pass: invalid/key/dotted-redefine-table-1.toml
pass: invalid/key/newline-1.toml
pass: invalid/key/special-character.toml
pass: invalid/key/duplicate-keys-4.toml
pass: invalid/key/without-value-4.toml
pass: invalid/key/no-eol.toml
pass: invalid/key/without-value-7.toml
pass: invalid/key/empty.toml
expected syntax error: invalid/key/space.toml
pass: invalid/key/newline-3.toml
pass: invalid/key/escape.toml
pass: invalid/key/newline-2.toml
pass: invalid/key/single-open-bracket.toml
pass: invalid/key/without-value-6.toml
pass: invalid/key/after-value.toml
pass: invalid/key/start-dot.toml
pass: invalid/key/quoted-unclosed-1.toml
pass: invalid/key/dotted-redefine-table-2.toml
pass: invalid/key/newline-5.toml
pass: invalid/key/open-bracket.toml
pass: invalid/key/duplicate-keys-1.toml
pass: invalid/key/after-array.toml
pass: invalid/key/without-value-1.toml
pass: invalid/key/two-equals-1.toml
pass: invalid/key/newline-4.toml
pass: invalid/encoding/bad-utf8-in-multiline-literal.toml
pass: invalid/encoding/bom-not-at-start-2.toml
pass: invalid/encoding/utf16-bom.toml
pass: invalid/encoding/utf16-key.toml
pass: invalid/encoding/bad-utf8-in-string.toml
pass: invalid/encoding/bad-codepoint.toml
pass: invalid/encoding/bad-utf8-in-comment.toml
pass: invalid/encoding/bad-utf8-in-string-literal.toml
pass: invalid/encoding/utf16-comment.toml
pass: invalid/encoding/bom-not-at-start-1.toml
pass: invalid/encoding/bad-utf8-in-multiline.toml
pass: invalid/encoding/bad-utf8-at-end.toml
pass: invalid/spec/keys-2.toml
pass: invalid/spec/inline-table-2-0.toml
pass: invalid/spec/table-9-1.toml
pass: invalid/spec/table-9-0.toml
pass: invalid/spec/string-4-0.toml
pass: invalid/spec/inline-table-3-0.toml
pass: invalid/spec/string-7-0.toml
pass: invalid/spec/key-value-pair-1.toml
pass: invalid/inline-table/no-close-2.toml
pass: invalid/inline-table/overwrite-02.toml
pass: invalid/inline-table/overwrite-03.toml
pass: invalid/inline-table/linebreak-4.toml
pass: invalid/inline-table/duplicate-key-1.toml
pass: invalid/inline-table/overwrite-08.toml
pass: invalid/inline-table/empty-3.toml
pass: invalid/inline-table/linebreak-3.toml
pass: invalid/inline-table/overwrite-04.toml
pass: invalid/inline-table/no-comma-2.toml
pass: invalid/inline-table/overwrite-05.toml
pass: invalid/inline-table/linebreak-2.toml
pass: invalid/inline-table/double-comma.toml
pass: invalid/inline-table/overwrite-09.toml
pass: invalid/inline-table/empty-2.toml
pass: invalid/inline-table/empty-1.toml
pass: invalid/inline-table/duplicate-key-3.toml
pass: invalid/inline-table/no-comma-1.toml
pass: invalid/inline-table/overwrite-06.toml
pass: invalid/inline-table/linebreak-1.toml
pass: invalid/inline-table/overwrite-10.toml
pass: invalid/inline-table/overwrite-07.toml
pass: invalid/inline-table/duplicate-key-2.toml
pass: invalid/inline-table/bad-key-syntax.toml
pass: invalid/inline-table/trailing-comma.toml
pass: invalid/inline-table/duplicate-key-4.toml
pass: invalid/inline-table/no-close-1.toml
pass: invalid/inline-table/overwrite-01.toml
pass: invalid/datetime/offset-overflow-minute.toml
pass: invalid/datetime/month-under.toml
pass: invalid/datetime/feb-30.toml
pass: invalid/datetime/no-leads-with-milli.toml
pass: invalid/datetime/y10k.toml
pass: invalid/datetime/no-t.toml
pass: invalid/datetime/no-secs.toml
pass: invalid/datetime/minute-over.toml
pass: invalid/datetime/time-no-leads.toml
pass: invalid/datetime/no-leads-month.toml
pass: invalid/datetime/mday-under.toml
pass: invalid/datetime/hour-over.toml
pass: invalid/datetime/no-leads.toml
pass: invalid/datetime/feb-29.toml
pass: invalid/datetime/second-over.toml
pass: invalid/datetime/mday-over.toml
pass: invalid/datetime/offset-overflow-hour.toml
pass: invalid/datetime/month-over.toml
pass: invalid/array/no-close-2.toml
pass: invalid/array/text-after-array-entries.toml
pass: invalid/array/extending-table.toml
pass: invalid/array/only-comma-2.toml
pass: invalid/array/no-close-3.toml
pass: invalid/array/text-before-array-separator.toml
pass: invalid/array/no-close-8.toml
pass: invalid/array/tables-2.toml
pass: invalid/array/double-comma-1.toml
pass: invalid/array/no-close-4.toml
pass: invalid/array/no-comma-3.toml
pass: invalid/array/no-comma-2.toml
pass: invalid/array/missing-separator-2.toml
pass: invalid/array/no-close-5.toml
pass: invalid/array/no-close-table-2.toml
pass: invalid/array/no-close-table-1.toml
pass: invalid/array/missing-separator-1.toml
pass: invalid/array/no-comma-1.toml
pass: invalid/array/no-close-6.toml
pass: invalid/array/no-close-7.toml
pass: invalid/array/extend-defined-aot.toml
pass: invalid/array/text-in-array.toml
pass: invalid/array/tables-1.toml
pass: invalid/array/double-comma-2.toml
pass: invalid/array/only-comma-1.toml
pass: invalid/array/no-close-1.toml
pass: invalid/local-date/month-under.toml
pass: invalid/local-date/feb-30.toml
pass: invalid/local-date/trailing-t.toml
pass: invalid/local-date/no-leads-with-milli.toml
pass: invalid/local-date/y10k.toml
pass: invalid/local-date/mday-under.toml
pass: invalid/local-date/no-leads.toml
pass: invalid/local-date/feb-29.toml
pass: invalid/local-date/mday-over.toml
pass: invalid/local-date/month-over.toml
"
`;
